Added "white-space: nowrap" to prevent action buttons from wrapping when row is expanded.

--- a/data-grid.scss
+++ b/data-grid.scss
@@ -146,6 +146,10 @@ data-grid {
 
     &.dg-expanded td {
       white-space: normal;
+
+      &.dg-actions.dg-actions-2 {
+        white-space: nowrap;
+      }
     }
   }
 
